2003-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Color.cpp: Ensure that all non-default constructors set
	opacity to opaque.

2003-09-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (colorHistogram): If map key is not const,
        then implicit type conversion occurs.  Sun's C++ compiler doesn't
        seem to handle that.  The map key is now defined as const in
	the insert arguments.

2003-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/Makefile.am: Add build support for colorHistogram.cpp.
	* tests/colorHistogram.cpp: New test program to test retrieving
	color histograms from the image using colorHistogram().
	* lib/Magick++/STL.h (colorHistogram): Added new template function
	to retrieve a color histogram into a user-provided container.
	Verified to work when using STL <vector> and <map> as the target
	container types.  When <map> is used, a user-specified color may
	be used to perform lookups in the map to obtain the usage count for
	that color.
	* lib/Color.cpp (operator >=): Insufficient resolution was being
	provided in order to reliably sort color objects in STL
	containers.  The updated algorithm should be fail-safe.

2003-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (channelDepth): New method to set or get the
	modulus depth for a specified channel.

2003-08-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Include.h (Magick): Added support for
	CopyCyanCompositeOp, CopyMagentaCompositeOp,
	CopyYellowCompositeOp, and CopyBlackCompositeOp, composition
	operators.

2003-08-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (depth): Method now only updates the
	Image/ImageInfo depth member and retrieves the value of the Image
	depth member.
	(modulusDepth): New method to inspect the pixels for actual
	modulus depth, or update/reduce the pixels to a specified modulus